--- a/about/index.html
+++ b/about/index.html
@@ -23,7 +23,108 @@
   <![endif]-->
 
   <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+  <header>
+    <div class="content-wrapper">
+      <a href="#">
+        <img src="" alt="unplugged logo"/>
+        <h2>Unplugged</h2>
+      </a>
+      <div class="header-divider"></div>
+      <nav>
+          <ul>
+              <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+              <li><a href="index.html" target="_blank">About</a></li>
+          </ul>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+
+    <section class="mission">
+      <div class="content-wrapper">
+        <h2>Our Mission - we want to make you the team you always wanted to be </h2>
+        <div class="mission-content">
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus
+            vel facilisis.
+          </p>
+        </div> <!-- Mission content ends-->
+      </div>
+    </section>
+
+    <section class="map">
+      <div class="content-wrapper">
+        <figure>
+        </figure>
+      </div>
+    </section>
+
+    <section class="contact-section">
+      <div class="content-wrapper">
+        <h2>Contact us, because you all need this.</h2>
+        <div class="general-info">
+          <h3>General Information</h3>
+          <address>
+            <p>
+              333 Main St. Lake Geneva, WI 53147<br>
+              555-555-5555<br>
+              hello@unplugged.com
+            </p>
+          </address>
+        </div>
+        <div class="facilitator-info">
+          <h3>Chat with a Facilitator</h3>
+          <address>
+            <p>
+              555-555-5555<br>
+              facilitator@unplugged.com
+            </p>
+          </address>
+        </div>
+      </div>
+    </section>
+
+  </main>
+
+  <footer>
+    <div class="content-wrapper">
+      <div class="footer-content">
+        <address class="contact">
+          <h4>Contact</h4>
+          <p>
+            555-555-5555<br>
+            <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
+          </p>
+        </address>
+        <div class="social">
+          <h4>Social</h4>
+          <div class="social-icons">
+            <p>
+              <a href="https://www.facebook.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.twitter.com/yoursite" target="_blank"></a>
+            </p>
+            <p>
+              <a href="https://www.instagram.com/yoursite" target="_blank"></a>
+            </p>
+          </div>
+        </div>
+      </div><!--Footer content ends -->
+    </div><!--Footer content-wrapper ends-->
+    <div class ="copyright">
+      <p>Copyright | Unplugged 2020</p>
+    </div>
+  </footer>
+
+
   <script src="../js/vendor/modernizr-3.8.0.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="../js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
