--- a/faqs/index.html
+++ b/faqs/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Unplugged | FAQs</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -39,7 +39,7 @@
     </div>
   </header>
 
-  <main>
+  <main class="faq">
     <div class="content-wrapper">
       <h2>Frequently Asked Questions</h2>
       <div class="faq-content">
