--- a/about/index.html
+++ b/about/index.html
@@ -32,7 +32,7 @@
       <div class="header-divider"></div>
       <nav>
           <ul>
-              <li><a href="../faq/index.html" target="_blank">FAQ</a></li>
+              <li><a href="../faqs/index.html" target="_blank">FAQ</a></li>
               <li><a href="index.html" target="_blank">About</a></li>
           </ul>
       </nav>
@@ -69,25 +69,23 @@
     <section class="contact-section">
       <div class="content-wrapper">
         <h2>Contact us, because you all need this.</h2>
-        <div class="general-info">
-          <h4>General Information</h4>
-          <address>
-            <p>
-              333 Main St. Lake Geneva, WI 53147<br>
-              555-555-5555<br>
-              hello@unplugged.com
-            </p>
-          </address>
-        </div>
-        <div class="facilitator-info">
-          <h4>Chat with a Facilitator</h4>
-          <address>
-            <p>
-              555-555-5555<br>
-              facilitator@unplugged.com
-            </p>
-          </address>
-        </div>
+        <address class="contact-content">
+          <div>
+            <h4>General Information</h4>
+              <p>
+                333 Main St. Lake Geneva, WI 53147<br>
+                555-555-5555<br>
+                hello@unplugged.com
+              </p>
+          </div>
+          <div>
+            <h4>Chat with a Facilitator</h4>
+              <p>
+                555-555-5555<br>
+                facilitator@unplugged.com
+              </p>
+          </div>
+        </address>
       </div>
     </section>
 
