--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
 
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:500,700" rel="stylesheet">
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
@@ -113,7 +116,7 @@
 
     <section class="reviews">
       <div class="content-wrapper">
-        <h2>Be a better team in 5 days, like these.</h2>
+        <h2>Be a better team in 5 days, like this one.</h2>
         <article>
           <div>
             <h3>LaCrue Bottle Co. <br> October 2017</h3>
@@ -136,7 +139,7 @@
         <address class="contact">
           <h4>Contact</h4>
           <p>
-            555-555-5555<br>
+            555-555-5555 <br>
             <a href="mailto:hello@unplugged.com">hello@unplugged.com</a>
           </p>
         </address>
