--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo"/>
-      </a>
+      <figure>
+        <a href="#">
+          <img src="img/unpluggedlogo.png" alt="unplugged logo"/>
+        </a>
+      </figure>
       <div class="header-divider"></div>
       <nav>
           <ul>
@@ -45,7 +47,7 @@
 
     <section class="hero-area">
       <div class="content-wrapper">
-        <h1>Retreat from the desk, return refreshed</h1>
+        <h1>Retreat from the desk, return refreshed.</h1>
       </div>
     </section>
 
@@ -116,7 +118,11 @@
     <section class="reviews">
       <div class="content-wrapper">
         <h2>Be a better team in 5 days, like this one.</h2>
+
         <article>
+          <figure>
+            <img src="img/reviews-photo.jpg" alt="Team photo"/>
+          </figure>
           <div>
             <h3>LaCrue Bottle Co. <br> October 2017</h3>
             <p>
