--- a/about/index.html
+++ b/about/index.html
@@ -28,10 +28,11 @@
   <!-- Add your site or application content here -->
   <header>
     <div class="content-wrapper">
-      <a href="#">
-        <img src="" alt="unplugged logo"/>
-        <h2>Unplugged</h2>
-      </a>
+      <figure>
+          <a href="#">
+            <img src="../img/unpluggedlogo.png" alt="unplugged logo"/>
+          </a>
+        </figure>
       <div class="header-divider"></div>
       <nav>
           <ul>
@@ -63,10 +64,8 @@
     </section>
 
     <section class="map">
-      <div class="content-wrapper">
         <figure>
-        </figure>
-      </div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5873.610449485334!2d-88.42834547455087!3d42.60187585073671!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88058beaba2a015f%3A0x4b28e3671bb3e0e9!2s333%20Main%20St%2C%20Lake%20Geneva%2C%20WI%2053147!5e0!3m2!1sen!2sus!4v1590601820926!5m2!1sen!2sus" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
     </section>
 
     <section class="contact-section">
