--- a/about/index.html
+++ b/about/index.html
@@ -32,14 +32,14 @@
   <header>
     <div class="content-wrapper">
       <figure>
-          <a href="#">
+          <a href="../index.html">
             <img src="../img/unpluggedlogo.png" alt="unplugged logo"/>
           </a>
         </figure>
       <div class="header-divider"></div>
       <nav>
           <ul>
-              <li><a href="../faqs/index.html" target="_blank">FAQ</a></li>
+              <li><a href="../faqs/index.html">FAQ</a></li>
               <li><a href="index.html" target="_blank">About</a></li>
           </ul>
       </nav>
