--- a/index.html
+++ b/index.html
@@ -32,15 +32,15 @@
   <header>
     <div class="content-wrapper">
       <figure>
-        <a href="#">
+        <a href="index.html">
           <img src="img/unpluggedlogo.png" alt="unplugged logo"/>
         </a>
       </figure>
       <div class="header-divider"></div>
       <nav>
           <ul>
-              <li><a href="faqs/index.html" target="_blank">FAQ</a></li>
-              <li><a href="about/index.html" target="_blank">About</a></li>
+              <li><a href="faqs/index.html">FAQ</a></li>
+              <li><a href="about/index.html">About</a></li>
           </ul>
       </nav>
     </div>
@@ -70,7 +70,7 @@
 
     <section class="features">
       <div class="content-wrapper">
-        <h2>Have the work week you've always dreamed of- without the bad wifi.</h2>
+        <h2>Have the work week you've always dreamed of - without the bad wifi.</h2>
           <div class="features-items">
             <article>
                 <p class="font-awesome-icon">
